[gd_scene load_steps=27 format=3 uid="uid://dfj30i0kby5id"]

[ext_resource type="Script" uid="uid://dsal4d17dlwfd" path="res://scripts/enemies/gun_skeleton/gun_skeleton.gd" id="1_vn5a0"]
[ext_resource type="Texture2D" uid="uid://dequcaf052cvc" path="res://assets/sprites/Gun_Skeleton.png" id="2_vn5a0"]
[ext_resource type="Script" uid="uid://dl2w6ux6lheu2" path="res://scripts/Player/gun_particles.gd" id="3_od36g"]
[ext_resource type="Texture2D" uid="uid://cyjgiuyp86xf8" path="res://assets/sprites/flash.png" id="4_28gmy"]
[ext_resource type="Script" uid="uid://dyw0mfrs00se3" path="res://scripts/enemies/gun_skeleton/idle.gd" id="5_28gmy"]
[ext_resource type="Script" uid="uid://cyibckprsnc7g" path="res://scripts/enemies/enemy_state_machine.gd" id="5_m0n4l"]
[ext_resource type="Script" uid="uid://c1doge7tubohn" path="res://scripts/enemies/gun_skeleton/move.gd" id="7_v1gd5"]
[ext_resource type="Script" uid="uid://dkqxluchmcf2v" path="res://scripts/enemies/gun_skeleton/shoot.gd" id="8_4hyti"]
[ext_resource type="Script" uid="uid://dpy36v7enolr5" path="res://scripts/enemies/gun_skeleton/death.gd" id="9_4hyti"]
[ext_resource type="Script" uid="uid://bxfgvkhc5rnxw" path="res://scripts/classes/sound_manager.gd" id="10_i6205"]
[ext_resource type="AudioStream" uid="uid://bx2bxlk13nbmd" path="res://assets/sounds/gunshot_small.mp3" id="11_yfl6b"]
[ext_resource type="AudioStream" uid="uid://c7h12foc8ohmv" path="res://assets/sounds/skeleton_death.mp3" id="12_yfl6b"]
[ext_resource type="AudioStream" uid="uid://bgcxdil7otdwa" path="res://assets/sounds/skeleton_hurt.mp3" id="13_vhpna"]
[ext_resource type="AudioStream" uid="uid://bn2piua7jt6y7" path="res://assets/sounds/skeleton_footstep.mp3" id="14_a1t14"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txkty"]
size = Vector2(10, 16)

[sub_resource type="Animation" id="Animation_5pgwy"]
resource_name = "Death"
length = 0.750005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3), Vector2i(10, 3), Vector2i(10, 2), Vector2i(10, 3), Vector2i(10, 2), Vector2i(10, 3)]
}

[sub_resource type="Animation" id="Animation_pbvs3"]
resource_name = "Idle"
length = 0.7143
loop_mode = 1
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ivqcw"]
resource_name = "Move"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_txkty"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bnirc"]
resource_name = "Shoot"
length = 0.80001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pgwy"]
_data = {
&"Death": SubResource("Animation_5pgwy"),
&"Idle": SubResource("Animation_pbvs3"),
&"Move": SubResource("Animation_ivqcw"),
&"RESET": SubResource("Animation_txkty"),
&"Shoot": SubResource("Animation_bnirc")
}

[sub_resource type="Gradient" id="Gradient_m0n4l"]
offsets = PackedFloat32Array(0, 0.3, 0.663636, 0.8, 1)
colors = PackedColorArray(0.996078, 0.905882, 0.380392, 1, 0.968627, 0.462745, 0.133333, 1, 0.0941176, 0.0784314, 0.145098, 1, 0.0941176, 0.0784314, 0.145098, 1, 0.0941176, 0.0784314, 0.145098, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d2wvv"]
gradient = SubResource("Gradient_m0n4l")

[sub_resource type="Curve" id="Curve_v1gd5"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.757353, 1.23596), 0.668539, 0.668539, 0, 0, Vector2(1, 2), 3.66742, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_y4r1p"]
curve = SubResource("Curve_v1gd5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4hyti"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
inherit_velocity_ratio = 0.2
spread = 20.0
initial_velocity_min = 15.0
initial_velocity_max = 50.0
gravity = Vector3(0, -50, 0)
damping_min = 50.0
damping_max = 50.0
scale_max = 1.2
scale_curve = SubResource("CurveTexture_y4r1p")
color_ramp = SubResource("GradientTexture1D_d2wvv")

[node name="GunSkeleton" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 4
script = ExtResource("1_vn5a0")
move_speed = 50
terminal_velocity = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_txkty")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_vn5a0")
hframes = 11
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5pgwy")
}
autoplay = "Idle"

[node name="GunParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4hyti")
script = ExtResource("3_od36g")

[node name="MuzzleFlash" type="PointLight2D" parent="."]
position = Vector2(6, -10)
enabled = false
texture = ExtResource("4_28gmy")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("5_m0n4l")
states_list = PackedStringArray("Idle", "Move", "Shoot", "Death")
starting_state = NodePath("Idle")
metadata/_custom_type_script = "uid://cyibckprsnc7g"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_28gmy")
animation_name = "Idle"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("7_v1gd5")
animation_name = "Move"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource("8_4hyti")
animation_name = "Shoot"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("9_4hyti")
animation_name = "Death"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="CastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-150, 0)
collision_mask = 2
hit_from_inside = true

[node name="CastRight" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(150, 0)
collision_mask = 2
hit_from_inside = true

[node name="Sound_Manager" type="Node" parent="."]
script = ExtResource("10_i6205")
metadata/_custom_type_script = "uid://bxfgvkhc5rnxw"

[node name="GunshotSmall" type="AudioStreamPlayer" parent="Sound_Manager"]
stream = ExtResource("11_yfl6b")
bus = &"SFX"

[node name="Death" type="AudioStreamPlayer" parent="Sound_Manager"]
stream = ExtResource("12_yfl6b")
bus = &"SFX"

[node name="Hurt" type="AudioStreamPlayer" parent="Sound_Manager"]
stream = ExtResource("13_vhpna")
bus = &"SFX"

[node name="Footstep" type="AudioStreamPlayer" parent="Sound_Manager"]
stream = ExtResource("14_a1t14")
bus = &"SFX"
